<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/text_view_design"
            android:text="@string/full_name"
            tools:ignore="NestedWeights" />

        <TextView
            style="@style/text_view_design"
            android:id="@+id/name_tv"
            tools:ignore="NestedWeights" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/text_view_design"
            android:text="@string/phone_number"
            tools:ignore="NestedWeights" />

        <TextView
            style="@style/text_view_design"
            android:textColor="@color/blue_link"
            tools:ignore="NestedWeights"
            android:id="@+id/phone_tv"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/text_view_design"
            android:text="@string/email_address"
            tools:ignore="NestedWeights" />

        <TextView
            style="@style/text_view_design"
            android:textColor="@color/blue_link"
            android:id="@+id/email_tv"
            android:textSize="20sp"
            tools:ignore="NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/text_view_design"
            android:text="@string/home_address"
            tools:ignore="NestedWeights" />

        <TextView
            style="@style/text_view_design"
            android:textColor="@color/blue_link"
            tools:ignore="NestedWeights"
            android:id="@+id/home_tv"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            style="@style/text_view_design"
            android:text="@string/web_site"
            tools:ignore="NestedWeights" />

        <TextView
            style="@style/text_view_design"
            android:textColor="@color/blue_link"
            android:id="@+id/web_tv"
            tools:ignore="NestedWeights" />

    </LinearLayout>
</LinearLayout>